--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build":
-      "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback",
+    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --history-api-fallback",
     "build :prod": "webpack -p && cp public/index.html dist/index.html"
   },
   "author": "risman",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
+    "jquery": "^3.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
